--- a/css/style.css
+++ b/css/style.css
@@ -8038,8 +8038,8 @@ h1, h2, h3, h4, h5,
       padding-bottom: 10px; } }
   .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
     font-size: 14px;
-    padding-top: 1.8rem;
-    padding-bottom: 1.8rem;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
     padding-left: 30px;
     padding-right: 30px;
     font-weight: 500;
@@ -8140,9 +8140,10 @@ h1, h2, h3, h4, h5,
 .navbar-brand {
   color: #000000;
   font-weight: 800;
-  font-size: 30px;
+  font-size: 25px;
   line-height: 1;
-  margin-bottom: 30px; }
+  /*margin-bottom: 30px; */
+}
   .navbar-brand span {
     color: #fdbe34; }
   .navbar-brand:hover, .navbar-brand:focus {
